// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic style 1`] = `
"() => create(\\"div\\", {
  \\"className\\": \\"do_67v\\"
});

Styles.include(\`
	.do_67v { 
		color: green;
	}
\`);"
`;

exports[`basic style 2`] = `
"() => <div className=\\"do_67v\\" />;

Styles.include(\`
	.do_67v { 
		color: green;
	}
\`);"
`;
